--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <meta name="description" content="Learn about our web design and digital marketing services at Abtik Digital. We help businesses grow online.">
 
     <title>Abtik-Digital</title>
+        <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XVW3STFSBY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XVW3STFSBY");
+    </script>
   </head>
   <body>
     <div id="root"></div>
